--- a/appspec.yml
+++ b/appspec.yml
@@ -5,11 +5,11 @@ files:
     destination: /var/www/
 hooks:
   BeforeInstall:
-    - location: scripts/before_install.sh
+    - location: jenkins/scripts/install_dependencies.sh
       timeout: 300
   ApplicationStop:
-    - location: scripts/stop_server.sh
+    - location: jenkins/scripts/stop_server.sh
       timeout: 300
   ApplicationStart:
-    - location: scripts/start_server.sh
+    - location: jenkins/scripts/start_server.sh
       timeout: 300
